ctre-phoenix6-sys/src/bindings.rs

extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDifferentialPositionVoltage(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        TargetPosition: f64,
        DifferentialPosition: f64,
        EnableFOC: bool,
        TargetSlot: ::std::os::raw::c_int,
        DifferentialSlot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDifferentialVelocityDutyCycle(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        TargetVelocity: f64,
        DifferentialPosition: f64,
        EnableFOC: bool,
        TargetSlot: ::std::os::raw::c_int,
        DifferentialSlot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDifferentialVelocityVoltage(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        TargetVelocity: f64,
        DifferentialPosition: f64,
        EnableFOC: bool,
        TargetSlot: ::std::os::raw::c_int,
        DifferentialSlot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDifferentialMotionMagicDutyCycle(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        TargetPosition: f64,
        DifferentialPosition: f64,
        EnableFOC: bool,
        TargetSlot: ::std::os::raw::c_int,
        DifferentialSlot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDifferentialMotionMagicVoltage(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        TargetPosition: f64,
        DifferentialPosition: f64,
        EnableFOC: bool,
        TargetSlot: ::std::os::raw::c_int,
        DifferentialSlot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlFollower(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        MasterID: ::std::os::raw::c_int,
        OpposeMasterDirection: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlStrictFollower(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        MasterID: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDifferentialFollower(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        MasterID: ::std::os::raw::c_int,
        OpposeMasterDirection: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDifferentialStrictFollower(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        MasterID: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlNeutralOut(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlCoastOut(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlStaticBrake(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlBalanceBattery(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlBMSManualIsolator(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Enable: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlBMSManualVboost(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        EnableClosedLoop: bool,
        TargetVoltage: f64,
        TargetDutyCycle: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlBMSManualPwmJunction(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        JunctionSelect: ::std::os::raw::c_int,
        JunctionDutyCycle: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlBMSClearFault(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlMusicTone(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AudioFrequency: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlMotionMagicVelocityDutyCycle(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Velocity: f64,
        Acceleration: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlMotionMagicVelocityTorqueCurrentFOC(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Velocity: f64,
        Acceleration: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideCoastDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlMotionMagicVelocityVoltage(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Velocity: f64,
        Acceleration: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDynamicMotionMagicDutyCycle(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Position: f64,
        Velocity: f64,
        Acceleration: f64,
        Jerk: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDynamicMotionMagicVoltage(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Position: f64,
        Velocity: f64,
        Acceleration: f64,
        Jerk: f64,
        EnableFOC: bool,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideBrakeDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDynamicMotionMagicTorqueCurrentFOC(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        Position: f64,
        Velocity: f64,
        Acceleration: f64,
        Jerk: f64,
        FeedForward: f64,
        Slot: ::std::os::raw::c_int,
        OverrideCoastDurNeutral: bool,
        LimitForwardMotion: bool,
        LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_DutyCycleOut_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Output: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn c_ctre_phoenix6_RequestControlDiff_PositionDutyCycle_Position(
        canbus: *const ::std::os::raw::c_char,
        ecuEncoding: u32,
        updateTime: f64,
        cancelOtherRequests: bool,
        AverageRequest_Position: f64,
        AverageRequest_Velocity: f64,
        AverageRequest_EnableFOC: bool,
        AverageRequest_FeedForward: f64,
        AverageRequest_Slot: ::std::os::raw::c_int,
        AverageRequest_OverrideBrakeDurNeutral: bool,
        AverageRequest_LimitForwardMotion: bool,
        AverageRequest_LimitReverseMotion: bool,
        DifferentialRequest_Position: f64,
        DifferentialRequest_Velocity: f64,
        DifferentialRequest_EnableFOC: bool,
        DifferentialRequest_FeedForward: f64,
        DifferentialRequest_Slot: ::std::os::raw::c_int,
        DifferentialRequest_OverrideBrakeDurNeutral: bool,
        DifferentialRequest_LimitForwardMotion: bool,
        DifferentialRequest_LimitReverseMotion: bool,
    ) -> ::std::os::raw::c_int;
}
